fix shift schedule details of time entries on non-normal cases

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -39,8 +39,10 @@ body { padding-top: 180px; }
     display: inline;
     float: left;
   }
-  
+
   #digiclock {
     float: none;
   }
 }
+
+body { padding-top: 120px; }
