--- a/app/assets/stylesheets/timesheets.css.scss
+++ b/app/assets/stylesheets/timesheets.css.scss
@@ -16,7 +16,7 @@ select.time {
 
 table.timesheets {
   border: 1px solid #ddd;
-  font-size: 12px;
+  font-size: 11px;
 }
 
 table.timesheets thead tr {
